update securityconfig and translation